# raspiml_f

./: README.md
tex_go/flutter/native_app/example/: README.md
tex_go/flutter/native_app/example/linux/: CMakeLists.txt
tex_go/flutter/native_app/ios/: native_app.podspec
tex_go/flutter/native_app/linux/: CMakeLists.txt
tex_go/flutter/native_app/macos/Classes/: native_app.c
tex_go/stts/stts_wails/: go.mod  main.go  wails.json
tex_go/stts/stts_wails/frontend/: package.json.md5
tex_go/wails/cfg_wails_htmx/wails_htmx_hello/: go.mod
tex_go/wails/cfg_wails_htmx/wails_htmx_hello/frontend/: package-lock.json
tex_go/wails/cfg_wails_react/: wails_init_react.sh
tex_go/wails/cfg_wails_react/wails_react_hello/: wails.json
tex_golang/flutter/native_app/: .metadata  README.md  ffigen.yaml  pubspec.yaml
tex_golang/flutter/native_app/android/: build.gradle
tex_golang/flutter/native_app/example/: pubspec.yaml
tex_golang/flutter/native_app/lib/: native_app.dart  native_app_bindings_generated.dart
tex_golang/flutter/native_app/macos/: native_app.podspec
tex_golang/flutter/native_app/src/: CMakeLists.txt  native_app.c
tex_golang/flutter/native_app/windows/: CMakeLists.txt
tex_golang/stts/stts_wails/frontend/: package.json
tex_golang/wails/cfg_wails_htmx/: wails_init_htmx.sh
tex_golang/wails/cfg_wails_htmx/wails_htmx_hello/: go.sum  main.go  wails.json
tex_golang/wails/cfg_wails_react/wails_react_hello/: go.mod  main.go
tex_hailo/: 01_test.sh
tex_py3/hw_camera/: hw_camera.py
tex_py3/tutorials/: 20241218_120541__svb.py
(+19 files in other folders)
